--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ fastapi==0.104.1
 uvicorn[standard]==0.24.0
 pydantic==2.5.0
 python-multipart==0.0.6
-numpy==1.24.3
+aiofiles==23.2.1
+Pillow==10.1.0
+numpy==1.25.2
+matplotlib==3.8.2
 scipy==1.11.4
-matplotlib==3.7.2
-pandas==2.0.3
+requests==2.31.0
